--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Tennis Camp | Prospect Park Tennis Camp",
+  "name": "Tennis Camp | Prospect Park Tennis Camp",
   "icons": [
     {
       "src": "favicon.ico",
