--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "react": "^16.13.1",
+    "react-date-picker": "^8.0.1",
+    "react-datepicker": "^3.1.3",
     "react-dom": "^16.13.1",
     "react-ga": "^3.1.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "simple-react-calendar": "^2.2.7"
   },
   "scripts": {
     "start": "react-scripts start",
