--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
+    "emailjs-com": "^2.6.3",
     "express": "^4.17.1",
     "mongodb": "^3.6.0",
     "react": "^16.13.1",
