--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "react-datepicker": "^3.1.3",
     "react-dom": "^16.13.1",
     "react-ga": "^3.1.2",
+    "react-responsive-modal": "^5.0.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
