--- a/client/package.json
+++ b/client/package.json
@@ -27,9 +27,11 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-slick": "^0.27.13",
     "react-stripe-elements": "^6.1.2",
     "reactjs-popup": "^1.5.0",
     "simple-react-calendar": "^2.2.7",
+    "slick-carousel": "^1.8.1",
     "stripe": "^8.81.0"
   },
   "scripts": {
