--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "@fortawesome/react-fontawesome": "^0.1.13",
     "@material-ui/core": "^4.11.0",
     "@stripe/react-stripe-js": "^1.1.2",
     "@stripe/stripe-js": "^1.9.0",
@@ -33,6 +36,7 @@
     "react-stripe-elements": "^6.1.2",
     "reactjs-popup": "^1.5.0",
     "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "simple-react-calendar": "^2.2.7",
     "slick-carousel": "^1.8.1",
     "stripe": "^8.81.0"
