--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
     "@material-ui/core": "^4.11.3",
+    "@rehooks/window-scroll-position": "^1.0.1",
     "@stripe/react-stripe-js": "^1.4.0",
     "@stripe/stripe-js": "^1.13.2",
     "@testing-library/jest-dom": "^4.2.4",
@@ -26,6 +27,7 @@
     "react-datepicker": "^3.7.0",
     "react-dates": "^21.8.0",
     "react-dom": "^16.14.0",
+    "react-focus-lock": "^2.5.1",
     "react-ga": "^3.3.0",
     "react-google-login": "^5.2.2",
     "react-redux": "^7.2.3",
@@ -42,7 +44,8 @@
     "redux-thunk": "^2.3.0",
     "simple-react-calendar": "^2.2.8",
     "slick-carousel": "^1.8.1",
-    "stripe": "^8.141.0"
+    "stripe": "^8.141.0",
+    "styled-components": "^5.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
